--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 						data-aos="fade-right"
 						data-aos-offset="0"
 						data-aos-delay="50"
-						data-aos-duration="1000"
+						data-aos-duration="500"
 						data-aos-easing="ease-in-out"
 						data-aos-mirror="true"
 						data-aos-once="false"
@@ -252,7 +252,7 @@
 						data-aos="fade-up"
 						data-aos-offset="10"
 						data-aos-delay="25"
-						data-aos-duration="1000"
+						data-aos-duration="500"
 						data-aos-easing="ease-in-out"
 						data-aos-mirror="true"
 						data-aos-once="false"
@@ -275,7 +275,7 @@
 						data-aos="fade-left"
 						data-aos-offset="0"
 						data-aos-delay="50"
-						data-aos-duration="1000"
+						data-aos-duration="500"
 						data-aos-easing="ease-in-out"
 						data-aos-mirror="true"
 						data-aos-once="false"
@@ -334,7 +334,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div data-aos="fade-up" data-aos-delay="3s" class=" section_title_container">
+					<div data-aos="fade-up" data-aos-delay="500" class=" section_title_container">
 						<div  class=" section_subtitle"><span style="color:red">Etch</span>New 2020</div>
 						<div class="section_title">Spot Light</div>
 					</div>
@@ -343,7 +343,7 @@
 			<div class="row services_row">
 				
 				<!-- Service -->
-				<div data-aos="fade-right" data-aos-delay="3s"  class="col-xl-4 col-md-6 service_col">
+				<div data-aos="fade-right" data-aos-delay="500"  class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
@@ -356,7 +356,7 @@
 				</div>
 
 				<!-- Service -->
-				<div data-aos="fade-up" data-aos-delay="3s" class="col-xl-4 col-md-6 service_col">
+				<div data-aos="fade-up" data-aos-delay="500" class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
@@ -369,7 +369,7 @@
 				</div>
 
 				<!-- Service -->
-				<div data-aos="fade-left" data-aos-delay="3s"  class="col-xl-4 col-md-6 service_col">
+				<div data-aos="fade-left" data-aos-delay="500"  class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
@@ -382,7 +382,7 @@
 				</div data-aos="fade-right">
 
 				<!-- Service -->
-				<div  data-aos="fade-right" data-aos-delay="3s" class="col-xl-4 col-md-6 service_col">
+				<div  data-aos="fade-right" data-aos-delay="500" class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
@@ -395,7 +395,7 @@
 				</div>
 
 				<!-- Service -->
-				<div data-aos="fade-up" data-aos-delay="3s"  class="col-xl-4 col-md-6 service_col">
+				<div data-aos="fade-up" data-aos-delay="500"  class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
@@ -408,7 +408,7 @@
 				</div>
 
 				<!-- Service -->
-				<div  data-aos="fade-left" data-aos-delay="3s" class="col-xl-4 col-md-6 service_col">
+				<div  data-aos="fade-left" data-aos-delay="500" class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
