--- a/index.html
+++ b/index.html
@@ -517,8 +517,11 @@
 				</div>
 			</div>
 		</div>
+		<img src="images/Cusat.svg" id="logoleft"/>
+<img src="images/isp banner.png" id="logoright"/>
 	</footer>
 </div>
+
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="styles/bootstrap-4.1.2/popper.js"></script>
