--- a/index.html
+++ b/index.html
@@ -517,8 +517,8 @@
 				</div>
 			</div>
 		</div>
-		<img src="images/Cusat.svg" id="logoleft"/>
-<img src="images/isp banner.png" id="logoright"/>
+		<img href="https://www.cusat.ac.in/"src="images/Cusat.svg" id="logoleft"/>
+<img href="http://photonics.cusat.edu/" src="images/isp banner.png" id="logoright"/>
 	</footer>
 </div>
 
