correcting forgetted lessons

--- a/index.html
+++ b/index.html
@@ -517,8 +517,8 @@
 				</div>
 			</div>
 		</div>
-		<img href="https://www.cusat.ac.in/"src="images/Cusat.svg" id="logoleft"/>
-<img href="http://photonics.cusat.edu/" src="images/isp banner.png" id="logoright"/>
+		<a href="https://www.cusat.ac.in/"><img src="images/Cusat.svg" id="logoleft"/></a>
+<a  href="http://photonics.cusat.edu/" ><img src="images/isp banner.png" id="logoright"/> </a>
 	</footer>
 </div>
 
