--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 			<div class="row services_row">
 				
 				<!-- Service -->
-				<div data-aos="fade-right" data-aos-delay="300"  class="col-xl-4 col-md-6 service_col">
+				<div data-aos="fade-right" data-aos-delay="30"  data-aos-anchor-placement="bottom-bottom" data-aos-duration="670" class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
@@ -356,7 +356,7 @@
 				</div>
 
 				<!-- Service -->
-				<div data-aos="fade-up" data-aos-delay="300" class="col-xl-4 col-md-6 service_col">
+				<div data-aos="fade-up" data-aos-delay="300" data-aos-anchor-placement="bottom-bottom" class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
@@ -369,7 +369,7 @@
 				</div>
 
 				<!-- Service -->
-				<div data-aos="fade-left" data-aos-delay="300"  class="col-xl-4 col-md-6 service_col">
+				<div data-aos="fade-left" data-aos-delay="300" data-aos-anchor-placement="bottom-bottom"  class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
