Added A neon background, Content update 0.3
Neon background is subject to the opinions. I don't think that the existing background is that much good. This image that I've just replaced the pevious one with is not the one perfect image because image quality is not that good. If we use an abstract svg, That'll be nice I think

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<!-- Home -->
 
 	<div class="home" id="home">
-		<div class="background_image" style="background-image:url(images/index.jpg)"></div>
+		<div class="background_image" style="background-image:url(images/neon.jpg)"></div>
 		<div class="overlay"></div><div id="particles-js"></div>
 		<div class="home_container">
 			<div class="container">
@@ -104,7 +104,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="home_title" style="margin-left:-110px;"><span style="color:red">Etch</span>New</div>
+							<div class="home_title" style="margin-left:-110px;text-shadow: 2px 2px 4px black"><span style="text-shadow: 2px 2px 4px black; color:red">Etch</span>New</div>
                             <div id="loader" class="loader_on_pc">
 									<div class="circle1" style="-webkit-transform: rotate(30deg);-ms-transform: rotate(30deg); transform: rotate(30deg);"></div>
 									<div class="circle2" style="-webkit-transform: rotate(-30deg);-ms-transform: rotate(-30deg); transform: rotate(-30deg);"></div>
@@ -399,10 +399,10 @@
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
-							<div class="service_title">Live Interaction</div>
+							<div class="service_title">Working Model Competition</div>
 						</div>
 						<div class="service_text">
-							<p>Interact with experts in the field and make use of this opportunity to have all your questions asked</p>
+							<p>Students are given an opportunity to exhibit their ideas related to various disciplines of physics as working models</p>
 						</div>
 					</div>
 				</div>
@@ -462,7 +462,7 @@
 						<div class="blog_post_title"><a href="#">Follow Us On</a></div>
 						<div class="blog_post_date"><a href="#"></a></div>
 						<div class="blog_post_text">
-							<p><a class="lol" href="https://www.instagram.com/etchnew"><i  class="fa fa-instagram"  style="font-size:24px"></i>  &nbsp &nbsp Instagram</a><br><br><a class="lol" href="https://www.youtube.com/channel/UCBC4TnbSR3-t-iupWb-RmAQ"><i class="fa fa-youtube"  style="font-size:24px"></i>  &nbsp &nbsp YouTube</a> <br><br><a class="lol" href="EtchNew/index.html"><i class="fa fa-facebook"  style="font-size:24px"></i>    &nbsp  &nbsp &nbsp Facebook</a></p>
+							<p><a class="lol" href="https://www.instagram.com/photonianz_"><i  class="fa fa-instagram"  style="font-size:24px"></i>  &nbsp &nbsp Instagram</a><br><br><a class="lol" href="https://www.youtube.com/channel/UCBC4TnbSR3-t-iupWb-RmAQ"><i class="fa fa-youtube"  style="font-size:24px"></i>  &nbsp &nbsp YouTube</a> <br><br><a class="lol" href="EtchNew/index.html"><i class="fa fa-facebook"  style="font-size:24px"></i>    &nbsp  &nbsp &nbsp Facebook</a></p>
 							<!-- Update Block -->
 						</div>
 						<div class="blog_post_link"><a href="#"></a></div>
