--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<!-- Home -->
 
 	<div class="home" id="home">
-		<div class="background_image" style="background-image:url(images/neon.jpg)"></div>
+		<div class="background_image" style="background-image:url(images/index.jpg)"></div>
 		<div class="overlay"></div><div id="particles-js"></div>
 		<div class="home_container">
 			<div class="container">
@@ -104,7 +104,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="home_title" style="margin-left:-110px;text-shadow: 2px 2px 4px black"><span style="text-shadow: 2px 2px 4px black; color:red">Etch</span>New</div>
+							<div class="home_title" style="margin-left:-110px"><span style="color:red">Etch</span>New</div>
                             <div id="loader" class="loader_on_pc">
 									<div class="circle1" style="-webkit-transform: rotate(30deg);-ms-transform: rotate(30deg); transform: rotate(30deg);"></div>
 									<div class="circle2" style="-webkit-transform: rotate(-30deg);-ms-transform: rotate(-30deg); transform: rotate(-30deg);"></div>
