Event registration Form

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							<div class="box_icon d-flex flex-column align-items-center justify-content-center"><img src="images/icon_white.png" alt=""></div>
 							<div class="box_title"><div class="milestone_counter" data-end-value="120" data-sign-after=" +">40</div>Schools</div>
 							<div class="box_text">
-								<p>Become a part of EtchNew2020 and promote the joy of learning while having fun.</p>
+								<p>Become a part of EtchNew2020 and promote the joy of learning by indulging in once in a lifetime experience filled with exciting events.</p>
 							</div>
 							
 						</div>
@@ -167,7 +167,7 @@
 							<div class="box_icon d-flex flex-column align-items-center justify-content-center"><img src="images/icon_white.png" alt=""></div>
 							<div class="box_title"><div class="milestone_counter" data-end-value="100" data-sign-after=" %">50</div>Fun</div>
 							<div class="box_text">
-								<p>With a wide variety of games, events, Seminar and experiment to obsearve and learn.</p>
+								<p>With a wide variety of games, events, Seminar and experiment to observe and learn.</p>
 							</div>
 							
 						</div>
@@ -364,6 +364,7 @@
 						</div>
 						<div class="service_text">
 							<p>Take part in an interactive quiz to test your knowledge and compete with others to earn your bragging rights. </p>
+						 <div class="button home_button ml-auto mr-auto"><a href="https://forms.gle/r4UXp7brKt6Txt8s6" target="_blank">Register Now</a></div>
 						</div>
 					</div>
 				</div>
@@ -376,7 +377,7 @@
 							<div class="service_title">Experiment Demonstration</div>
 						</div>
 						<div class="service_text">
-							<p>WIth a wide variey of experiment demonstrated infront of you this a perfect opportunity to observe and Learn</p>
+							<p>WIth a wide variey of experiments demonstrated infront of you this a perfect opportunity to observe and Learn</p>
 						</div>
 					</div>
 				</div data-aos="fade-right">
@@ -403,6 +404,7 @@
 						</div>
 						<div class="service_text">
 							<p>Students are given an opportunity to exhibit their ideas related to various disciplines of physics as working models</p>
+							<div class="button home_button ml-auto mr-auto"><a href="https://forms.gle/r4UXp7brKt6Txt8s6" target="_blank">Register Now</a></div>
 						</div>
 					</div>
 				</div>
