Bug Fix Link Join Now

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 						<div class="about_text">
 							<p>Everything, from the distant stars to the fireflies at night, signifies the mastery of light. Set in the backdrop of various disciplines of physical science, the annual optics fest EtchNew2020 brings together both the fundamental and advanced concepts and applications of photonics. Join us in the journey to embark on the advent, development, and future of light.</p>
 						</div>
-						<div class="button about_button"><a href="#https://forms.gle/yrL5znbNS16dKqVj6" target="_blank">Join Now</a></div>
+						<div class="button home_button ml-auto mr-auto"><a href="https://forms.gle/yrL5znbNS16dKqVj6" target="_blank">Join Now</a></div>
 					</div>
 				</div>
 			</div>
@@ -295,7 +295,7 @@
 			</div>
 			<div class="row test_button_row">
 				<div class="col text-center">
-					<div class="button test_button"><a href="#https://forms.gle/yrL5znbNS16dKqVj6" target="_blank">Join Now</a></div>
+					<div class="button home_button ml-auto mr-auto"><a href="https://forms.gle/yrL5znbNS16dKqVj6" target="_blank">Join Now</a></div>
 				</div>
 			</div>
 		</div>
