Minor Change Link

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 						</div>
 						<div class="service_text">
 							<p>Students are given an opportunity to exhibit their ideas related to various disciplines of physics as working models</p>
-							<div class="button home_button ml-auto mr-auto"><a href="https://forms.gle/r4UXp7brKt6Txt8s6" target="_blank">Register Now</a></div>
+							<div class="button home_button ml-auto mr-auto"><a href="https://forms.gle/bqHVUQFCy5okYgXa6" target="_blank">Register Now</a></div>
 						</div>
 					</div>
 				</div>
@@ -451,7 +451,7 @@
 						<div class="blog_post_title"><a href="#">Where To Find Us</a></div>
 						<div class="blog_post_date"><a href="#"></a></div>
 						<div class="blog_post_text">
-							<p> <b>International School Of Photonics </b><br> Cochin University of Science and Technology<br>University Road, South Kalamassery, Kalamassery, Ernakulam, Kerala 682022</p>
+							<p> <a class="lol" href="https://goo.gl/maps/NrQnWbkcZgdUyCUQ8"><b>International School Of Photonics </b><br> Cochin University of Science and Technology<br>University Road, South Kalamassery, Kalamassery, Ernakulam, Kerala 682022</a></p>
 						</div>
 						<div class="blog_post_link"><a href="#"></a></div>
 					</div>
@@ -478,7 +478,11 @@
 						<div class="blog_post_title"><a href="#">Reach Us On</a></div>
 						<div class="blog_post_date"><a href="#"></a></div>
 						<div class="blog_post_text">
-							<p><a href="tel:+91628241549"><b>Abhiram - +91628241549 </b></a><br><a href="tel:+919061975393"><b>Sisira - +919061975393 </b></a><br><a href="tel:+919645735303"><b>Ajmal - +919645735303</b></a><br><a href="mailto:etchnew2020@gmail.com">etchnew2020@gmail.com</a></p>
+							<p>
+									<a class="lol" href="tel:+91628241549"><i class="fa fa-phone" aria-hidden="true" style="font-size:24px"></i><b>&nbsp &nbsp Abhiram - +91628241549 </b></a>
+								<br><a class="lol" href="tel:+919061975393"><i class="fa fa-phone" aria-hidden="true" style="font-size:24px"></i><b>&nbsp &nbsp Sisira - +919061975393 </b></a>
+								<br><a class="lol" href="tel:+919645735303"><i class="fa fa-phone" aria-hidden="true" style="font-size:24px"></i><b>&nbsp &nbsp Ajmal -  +919645735303</b></a>
+								<br><a class="lol" href="mailto:etchnew2020@gmail.com"><i class="fa fa-envelope" aria-hidden="true" style="font-size:24px"></i>&nbsp &nbsp etchnew2020@gmail.com</a></p>
 							<!-- Update Block -->
 
 						</div>
