--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="EtchNew 2020 | international school of photonics | optics fest">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="VsjoM-lIIgwJ1wOC23ugmseK6oV61ZFzOQ4j6swtNqI" />
 
 <link rel="shortcut icon" href="images/title_icon.png" type="image/type here">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap-4.1.2/bootstrap.min.css">
