Image compression and brochure

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 				<div class="row">
 					<div class="col">
 						<div class="home_content text-center">
-							<div class="video_link">
-							<a id="broch" href="images/brochure.pdf">Brochure</a>
+							<div class="video_link"><i class="fa fa-book" style="font-size: 24px;color:	rgba(128, 50, 103, 0.925);" aria-hidden="true"></i>
+							<a   class="video_text style="color:rgba(224, 224, 224, 0.74)"  id="broch" href="images/brochure.pdf" target="_blank">&nbsp View Brochure</a>
 							</div>
 							<div class="home_title" style="margin-left:-110px"><span style="color:red">Etch</span>New</div>
                             <div id="loader" class="loader_on_pc">
@@ -309,7 +309,7 @@
 				<div class="owl-item"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/gallery_3.jpg" alt=""></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/gallery_4.jpg" alt=""></div>
+				<div class="owl-item"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/gallery_4.jpeg" alt=""></div>
 
 				<!-- Slide -->
 				<div class="owl-item"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/gallery_5.jpg" alt=""></div>
