--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 	<!-- Testimonials -->
 
 	<div class="testimonials" id="Testimonials">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/middle.jpg" data-speed="0"></div>
+		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/middle.jpeg" data-speed="0"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
@@ -309,16 +309,16 @@
 				<div class="owl-item"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/gallery_3.jpg" alt=""></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/gallery_4.jpeg" alt=""></div>
+				<div class="owl-item"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/gallery_4.jpg" alt=""></div>
 
 				<!-- Slide -->
 				<div class="owl-item"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/gallery_5.jpg" alt=""></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/gallery_1.jpeg" alt=""></div>
+				<div class="owl-item"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/gallery_1.jpg" alt=""></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/gallery_2.jpeg" alt=""></div>
+				<div class="owl-item"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/gallery_2.jpg" alt=""></div>
 
 			</div>
 		</div>
@@ -447,7 +447,7 @@
 						<div class="blog_post_title"><a href="#">Where To Find Us</a></div>
 						<div class="blog_post_date"><a href="#"></a></div>
 						<div class="blog_post_text">
-							<p> <a class="lol" href="https://goo.gl/maps/NrQnWbkcZgdUyCUQ8"><b>International School Of Photonics </b><br> Cochin University of Science and Technology<br>University Road, South Kalamassery, Kalamassery, Ernakulam, Kerala 682022</a></p>
+							<p><a class="lol" href="http://photonics.cusat.edu/" target="_blank"><b>International School Of Photonics </b><br></a> <a class="lol" href="https://goo.gl/maps/NrQnWbkcZgdUyCUQ8"> Cochin University of Science and Technology<br>University Road, South Kalamassery, Kalamassery, Ernakulam, Kerala 682022</a></p>
 						</div>
 						<div class="blog_post_link"><a href="#"></a></div>
 					</div>
