Added quiz poster. played a bit with animation duration and all.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<div class="col">
 						<div class="home_content text-center">
 							<div class="video_link"><i class="fa fa-book" style="font-size: 24px;color:	rgba(128, 50, 103, 0.925);" aria-hidden="true"></i>
-							<a   class="video_text style="color:rgba(224, 224, 224, 0.74)"  id="broch" href="images/brochure.pdf" target="_blank">&nbsp View Brochure</a>
+							<a   class="video_text"  id="broch" href="files/brochure.pdf" target="_blank">&nbsp View Brochure</a>
 							</div>
 							<div class="home_title" style="margin-left:-110px"><span style="color:red">Etch</span>New</div>
                             <div id="loader" class="loader_on_pc">
@@ -221,13 +221,9 @@
 					<div class="test test_1 d-flex flex-row pop align-items-start justify-content-start">
 						<div
 						data-aos="fade-right"
-						data-aos-offset="0"
-						data-aos-delay="50"
-						data-aos-duration="750"
-						data-aos-easing="ease-in-out"
-						data-aos-mirror="true"
-						data-aos-once="false"
-						data-aos-anchor-placement="bottom-bottom"
+						 data-aos-delay="30" 
+						  data-aos-anchor-placement="bottom-bottom"
+						   data-aos-duration="670"
 					  ><div><div class="test_image"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/icon_white.png"></div></div>
 						<div class="test_content">
 							<div class="test_name"><a href="#">Arjun Gopakumar</a></div>
@@ -246,13 +242,7 @@
 					<div class="test d-flex flex-row pop align-items-start justify-content-start">
 						<div
 						data-aos="fade-up"
-						data-aos-offset="10"
-						data-aos-delay="25"
-						data-aos-duration="750"
-						data-aos-easing="ease-in-out"
-						data-aos-mirror="true"
-						data-aos-once="false"
-						data-aos-anchor-placement="bottom-bottom"
+						data-aos-delay="30"  data-aos-anchor-placement="bottom-bottom" data-aos-duration="670"
 					  ><div><div class="test_image"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/icon_white.png" alt=""></div></div>
 						<div class="test_content">
 							<div class="test_name"><a href="#">Savithri</a></div>
@@ -269,13 +259,7 @@
 					<div class="test d-flex flex-row pop align-items-start justify-content-start">
 						<div
 						data-aos="fade-left"
-						data-aos-offset="0"
-						data-aos-delay="50"
-						data-aos-duration="750"
-						data-aos-easing="ease-in-out"
-						data-aos-mirror="true"
-						data-aos-once="false"
-						data-aos-anchor-placement="bottom-bottom"
+						data-aos-delay="30"  data-aos-anchor-placement="bottom-bottom" data-aos-duration="670"
 					  ><div><div class="test_image"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/icon_white.png" alt=""></div></div>
 						<div class="test_content">
 							<div class="test_name"><a href="#">Govind</a></div>
@@ -356,7 +340,7 @@
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/icon_black.png" alt=""></div></div>
-							<div class="service_title">Quiz</div>
+							<div class="service_title">Quiz &nbsp; <i class="fa fa-book" style="font-size: 24px;color:	rgba(128, 50, 103, 0.925);" aria-hidden="true"></i><a   class="video_text"  id="post" href="files/quiz.pdf" target="_blank">&nbsp View Poster</a></div>
 						</div>
 						<div class="service_text">
 							<p>Take part in an interactive quiz to test your knowledge and compete with others to earn your bragging rights. </p>
