Revert "Update index.html"
This reverts commit bf874911f53a7fdfc749a4d0890b104e4b3943b8.

--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
                             </ul>
 				<p></p>
 				<p></p>
-				<p><span style="color:#732d5d; font-size:18;">*</span> 28 Exclusive for school students</p>
-				<p><span style="color:#732d5d; font-size:18;">*</span> ID Must for Individual Registration</p>
+				<p><span style="color:#732d5d; font-size:18;">*</span> 28 Exclusive for students</p>
+				<p><span style="color:#732d5d; font-size:18;">*</span> Individual Registration id must.</p>
                         </div>
 					</div>
 			</div>
