--- a/index.html
+++ b/index.html
@@ -308,9 +308,8 @@
                                 <li><span class="schedule_time">02:00 PM : </span>Quiz Competition Finals</li>
                             </ul>
 				<p></p>
-				<p></p>
-				<p><span style="color:#732d5d; font-size:18;">*</span> 28 Exclusive for students</p>
-				<p><span style="color:#732d5d; font-size:18;">*</span> Individual Registration id must.</p>
+				<p><span style="color:#732d5d">*</span>28 Exclusive for students</p>
+				<p><span style="color:#732d5d">*</span>Individual Registration id must.</p>
                         </div>
 					</div>
 			</div>
