Revert "Added content to schedule"
This reverts commit 3c8323de0593c3fcce5ce98a8a05017bcfc420b1.

--- a/index.html
+++ b/index.html
@@ -307,9 +307,8 @@
                                 <li><span class="schedule_time">11:00 AM : </span>Quiz Competition Prelims</li>
                                 <li><span class="schedule_time">02:00 PM : </span>Quiz Competition Finals</li>
                             </ul>
-				<p></p>
 				<p><span style="color:#732d5d">*</span>28 Exclusive for students</p>
-				<p><span style="color:#732d5d">*</span>Individual Registration id must.</p>
+				<p>Individual Registration id must.</p>
                         </div>
 					</div>
 			</div>
