--- a/index.html
+++ b/index.html
@@ -376,7 +376,13 @@
 						</div>
 						<li style="color: #262626; opacity: 0.9; font-weight : 600; list-style: none; text-align: center;">For School Students</li>
 						<div class="service_text">
-							<p>Take part in an interactive quiz to test your knowledge and compete with others to earn your bragging rights. </p>
+							<p> 1. Team can consist of two members<br/>
+							2. 	Participants should bring their id card<br/>
+								3. Participants must report before 10:30 AM<br/>
+								4. There will be preliminary rounds for quiz <br/>
+								5. Finals will be in bounce and pounce format.<br/>
+								6. Five teams will be selected to the finals. <br/>
+							 </p>
 						 <div class="button home_button ml-auto mr-auto"><a href="https://forms.gle/r4UXp7brKt6Txt8s6" target="_blank">Register Now</a></div>
 						</div>
 					</div>
