school students only

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 							<div><div class="service_icon"><img alt="ISP photonics EtchNew SPIE OSA Optics fest CUSAT Ernakulam Cochin University kalamassery Electronics physics" src="images/icon_black.png" alt=""></div></div>
 							<div class="service_title">Quiz &nbsp; <i class="fa fa-book" style="font-size: 24px;color:	rgba(128, 50, 103, 0.925);" aria-hidden="true"></i><a   class="video_text"  id="post" href="files/quiz.pdf" target="_blank">&nbsp View Poster</a></div>
 						</div>
-						<li style="color: #262626; opacity: 0.9; font-weight : 600; list-style: none; text-align: center;">For School Students</li>
+						<li style="color: #262626; opacity: 0.9; font-weight : 600; list-style: none; text-align: center;">On 28<sup>th</sup>, School Students only</li>
 						<div class="service_text">
 							<p> 1. Team can consist of two members<br/>
 							2. 	Participants should bring their id card<br/>
